--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,20 @@
 {
   "presets": ["react", "es2015", "stage-0"],
-  "plugins": ["react-hot-loader/babel"],
+  "plugins": ["react-hot-loader/babel",
+    ["babel-root-import", [{
+        "rootPathPrefix": "!",
+        "rootPathSuffix": "client"
+      }, {
+        "rootPathPrefix": "@",
+        "rootPathSuffix": "client/components"
+      }, {
+        "rootPathPrefix": "#",
+        "rootPathSuffix": "client/modules"
+      }, {
+        "rootPathPrefix": "$",
+        "rootPathSuffix": "client/util"
+      }
+    ]]],
   "env": {
     "production": {
       "presets": ["es2015", "react", "react-optimize", "es2015-native-modules", "stage-0"]
