--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
     "react-intl": "^2.1.2",
+    "react-mdl": "^1.7.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "redux": "^3.5.2",
@@ -64,6 +65,7 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
+    "babel-root-import": "^4.1.3",
     "chai": "^3.5.0",
     "chunk-manifest-webpack-plugin": "0.1.0",
     "coveralls": "^2.11.9",
